# aristote-llm-workers

./: .env.dist  .gitignore  .gitlab-ci.yml  Dockerfile  Justfile  README.md  data.dvc  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
aristote/: custom_exceptions.py  evaluate_quizz.py  generate_quizz.py  translate_quizz.py
aristote/cli/: cli.py
aristote/connectors/: connectors.py
aristote/dtos/: __init__.py  dtos.py
aristote/evaluation/: evaluator.py  main.py
aristote/evaluation/prompts/english/: quiz_about_concept_prompt.txt
aristote/evaluation/prompts/zephyr/: question_is_question_prompt.txt
aristote/metadata_generation/: config.py  main.py  metadata_generator.py
aristote/metadata_generation/prompts/english/: combine_topics_prompt.txt  generate_topics_prompt.txt  media_type_prompt.txt
aristote/metadata_generation/prompts/vigostral/: summary_prompt.txt
aristote/metadata_generation/prompts/zephyr/: discipline_prompt.txt  title_prompt.txt
aristote/notes_generation/: config.py  main.py  notes_generator.py
aristote/pipeline/: configs.py  main.py
aristote/preprocessing/: preprocessing.py
aristote/quiz_generation/: config.py  main.py  quiz_generator.py
aristote/quiz_generation/prompts/mixtral/: quiz_generation_prompt.txt
aristote/quiz_generation/prompts/vigostral/: quiz_generation_prompt.txt
aristote/reformulation/: reformulation.py
aristote/translation_generation/: config.py  main.py  translation_generator.py
aristote/translation_generation/prompts/zephyr/: description_translation_prompt.txt  quiz_translation_prompt.txt
configs/: evaluate.yml  metadata_generation.yml  quiz_generation.yml
configs/hf_models/: evaluate.yml  metadata_generation.yml  notes_generation.yml  quiz_generation.yml  translate.yml
configs/openai_fr/: metadata_generation.yml  quiz_generation.yml
configs/openai_fr/gpt4/: metadata_generation.yml  quiz_generation.yml
configs/openai_models/: evaluate.yml  metadata_generation.yml  notes_generation.yml  quiz_generation.yml  translate.yml
configs/zephyr_en/: metadata_generation.yml  quiz_generation.yml
configs/zephyr_fr/: metadata_generation.yml  quiz_generation.yml
demonstrator/: app.py  generate_quizzes_live.py  get_generated_quizzes.py  main.py  transcript_name2path.json
docs/: doc_projet_dty.md
experiment_template/: copier.yml  extensions.py
experiment_template/template/{{ exp_subfolder }}/: README.md
experiments/2023-10-25_zero-shot-quiz-generation/: README.md  explore_transcripts.ipynb  generate_quiz.py  generate_quiz_openai.py  generate_quiz_with_outlines.py  results.dvc
experiments/2023-10-25_zero-shot-quiz-generation/configs/: metadata_config.yml  quiz_generation_config.yml
experiments/2023-10-25_zero-shot-quiz-generation/configs/skypilot/: llama2_34b_skypilot_config.yml  vigostral_skypilot_config.yml  zephyr_skypilot_config.yml
experiments/2023-10-25_zero-shot-quiz-generation/create_transcript/: create_transcript.py  data.dvc
experiments/2023-10-25_zero-shot-quiz-generation/early_generations/: explore_transcripts.ipynb  generate_quiz_openai.py  generate_quiz_with_outlines.py  requirements-outlines.txt
experiments/2023-10-25_zero-shot-quiz-generation/explore_results/: results_exploration.ipynb
experiments/2023-10-25_zero-shot-quiz-generation/results/: gpt_3_5_ri_quiz.md  ri_quiz.md  vigostral_ri_quiz.md
experiments/2023-10-25_zero-shot-quiz-generation/vigostral/: app.py  generate_quizes.py  requirements.txt  server.py
experiments/2023-11-21_gpt4-english-filtering/: README.md  results.dvc
experiments/2023-11-21_gpt4-english-filtering/configs/: full_config_gpt4_en.yml  full_config_gpt4_fr.yml  full_config_hermes_en.yml  full_config_hermes_fr.yml  full_config_zephyr_en.yml  full_config_zephyr_fr.yml  full_en_config.yml  gpt4_en_eval.yml  hermes_fr_metadata_gen.yml  zephyr_en_metadata_gen.yml  zephyr_en_quiz_gen.yml  zephyr_fr_metadata_gen.yml
experiments/2023-11-21_gpt4-english-filtering/configs/biology/: gpt4_en_eval.yml  zephyr_en_metadata_gen.yml  zephyr_en_quiz_gen.yml
experiments/2023-11-21_gpt4-english-filtering/configs/clustering/: zephyr_en_metadata_gen.yml
experiments/2023-11-21_gpt4-english-filtering/notebooks/: average_scores.ipynb  debug_preprocessing.ipynb  prometheus_evaluation.ipynb
experiments/2023-11-21_gpt4-english-filtering/skypilot/: config.yml
experiments/2024-03-19_remove-illuin-llm-tools/: results.dvc
experiments/2024-03-19_remove-illuin-llm-tools/configs/: evaluate.yml  metadata_generation.yml  quiz_generation.yml
quiz_generation/cli/: cli.py
quiz_generation/connectors/: api_connector.py  connectors.py
quiz_generation/dtos/: __init__.py  dtos.py
quiz_generation/evaluation/: evaluator.py  main.py
quiz_generation/evaluation/prompts/english/: question_is_question_prompt.txt
quiz_generation/evaluation/prompts/vigostral/: question_is_question_prompt.txt  question_is_related_prompt.txt
quiz_generation/evaluation/prompts/zephyr/: answers_are_related_prompt.txt  fake_answers_are_not_obvious_prompt.txt
quiz_generation/metadata_generation/: config.py  main.py  metadata_generator.py
quiz_generation/metadata_generation/prompts/: description_prompt.txt
quiz_generation/metadata_generation/prompts/english/: title_prompt.txt
quiz_generation/metadata_generation/prompts/vigostral/: combine_topics_prompt.txt  generate_topics_prompt.txt  title_prompt.txt
quiz_generation/pipeline/: configs.py  main.py
quiz_generation/preprocessing/: preprocessing.py
quiz_generation/quiz_generation/: config.py  main.py  quiz_generator.py
quiz_generation/quiz_generation/prompts/: quiz_evaluation_prompts.json  quiz_generation_prompt.txt
quiz_generation/reformulation/: reformulation.py
server/: Dockerfile  app.py  dtos.py  server-requirements.txt  server_dtos.py
skypilot/: config.yml  config_a100.yml
skypilot/train/: config.yml  run.sh  setup.sh
tests/: test_preprocessing.py
tests/example/: bio_transcript.txt
transcripts_examples/fr/: deuxieme_loi_de_newton_les_bons_profs.txt
(+60 files in other folders)
